[metadata]
name = kapylan
version = 1.0.1
description = Python version of the jMetal framework
long_description = file: README.md
long_description_content_type = text/markdown
author = Irene Sánchez Jiménez
author_email = iresanjim@uma.es
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3.6

[options]
package_dir=
    =src
packages=find:
install_requires =
    numpy>=1.16.0
    pandas>=0.24.2
    plotly>=3.3.0
    matplotlib>=3.0.2
    scipy>=1.3.0
    statsmodels>=0.9.0
    httpx==0.22.0
    rdflib==6.1.1
    pydantic==1.9.1
    pydantic[dotenv]
    stringcase==1.2.0
python_requires = >=3.7

[options.extras_require] 
test =
    mockito
    PyHamcrest

[options.packages.find]
where = src